make-a-wish-salesforce/src/objects/VisualAntidote__Form_Rule__c.object
<CustomObject>
    <fields>
        <fullName>VisualAntidote__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Form Rules</relationshipLabel>
        <relationshipName>Form_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Rule_Order__c</fullName>
        <label>Rule Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Rule_Script__c</fullName>
        <label>Rule Script</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Rule_XML__c</fullName>
        <label>Rule XML</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Rule</label>
    <listViews>
        <fullName>VisualAntidote__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>VisualAntidote__Form__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FFSR-{000000}</displayFormat>
        <label>Form Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>